# distrivite

./: .gitignore  Pipfile  Procfile  README.md  aws-s3.txt  db.json  delete_db_migrations.py  delete_migrations.py  format_prescription.ipynb  manage.py  package-lock.json  package.json  postgresdb.txt  pyproject.toml  requirements.txt  restoredata.sh  text.txt  tiiqtaqReport.ipynb  userOrg.ipynb
apps/api/: urls.py
apps/api/docta/: serializers.py  urls.py  views.py
apps/api/v1/auth/: serializers.py  urls.py  views.py
apps/api/v1/data/: serializers.py  urls.py  views.py
apps/cashflow/: admin.py  cashflow.ipynb  filters.py  forms.py  managers.py  models.py  urls.py  views.py
apps/cashflow/migrations/: 0001_initial.py  0002_initial.py
apps/cashflow/templates/cashflow/: cash_register_add.html  cash_register_change.html  cash_register_list.html  category_add.html  category_change.html  category_list.html  deposit_add.html  deposit_change.html  deposit_list.html  deposit_receipt.html  deposit_report.html  transaction_list.html  transaction_report.html  withdrawal_add.html  withdrawal_change.html  withdrawal_list.html  withdrawal_receipt.html  withdrawal_report.html
apps/core/: admin.py  decorators.py  fields.py  filters.py  managers.py  models.py  services.py  urls.py  utils.py
apps/core/migrations/: 0001_initial.py
apps/core/templates/core/: base.html  footer.html  index.html  landing.html  list_pdf_base.html  locale.html  organization_features.html  pdf_base.html  pdf_base_landscape.html  pdf_base_matrix_lx350_printer.html  quanta.html  receipt.html  receipt2.html  receipt_suivi.html  receiptopticiop.html  thermal_printer_base.html
apps/core/templatetags/: core.py
apps/core/views/: __init__.py  core.py  dal.py
apps/orders/: admin.py  coverage.ipynb  docs_urls.py  docs_views.py  fields.py  filters.py  forms.py  inventory.ipynb  item.ipynb  managers.py  models.py  product.ipynb  resources.py  signals.py  urls.py  validators.py  views.py  widgets.py
apps/orders/migrations/: 0001_initial.py  0002_initial.py  0003_alter_facturationpayment_transaction_broker_and_more.py  0003_initial.py  0003_remove_prepaidaccount_customer_and_more.py  0004_alter_stock_unique_together.py  0004_delete_facturationpayment.py  0005_rename_facturationpayment2_facturationpayment.py  0005_stock_is_active.py  0006_alter_facturationpayment_facturation_and_more.py  0006_customer_credit_limit.py  0007_bulkcreditpayment.py  0007_remove_facturation_is_approved_and_more.py  0008_facturationpayment_bulk_credit_payment.py  0008_facturationstock_is_delivered.py  0009_alter_facturation_options_and_more.py  0010_bulkcreditpayment_bill_number.py  0011_customer_prepaid_amount.py
apps/orders/templates/orders/: batch_add.html  batch_change.html  batch_list.html  bulk_credit_payment_add.html  bulk_credit_payment_change.html  bulk_credit_payment_detail.html  bulk_credit_payment_list.html  category_add.html  category_change.html  category_list.html  commercial_add.html  commercial_change.html  commercial_list.html  consultation_add.html  consultation_add_1.html  consultation_change.html  consultation_change_1.html  consultation_delete.html  consultation_detail_add.html  consultation_detail_change.html  consultation_list.html  coverage_add.html  coverage_change.html  coverage_delivery_receipt_add.html  coverage_delivery_receipt_change.html  coverage_delivery_receipt_list.html  coverage_facturation_add.html  coverage_facturation_batch_add.html  coverage_facturation_batch_change.html  coverage_facturation_batch_list.html  coverage_facturation_change.html  coverage_facturation_list.html  coverage_facturation_payment_add.html  coverage_facturation_payment_change.html  coverage_facturation_payment_list.html  coverage_facturation_prescription_add.html  coverage_facturation_prescription_change.html  coverage_facturation_prescription_list.html  coverage_hospitalization_add.html  (+66 more)
apps/organization/: admin.py  app_settings.py  business.ipynb  context_processors.py  features_urls.py  fixed_permissions.ipynb  forms.py  managers.py  middleware.ipynb  middleware.py  mixins.py  models.py  org_things.py  permissions.ipynb  permissions2.ipynb  permissions_widget.ipynb  signals.py  urls.py  utils.py  views.py  widgets.ipynb  widgets.py
apps/organization/migrations/: 0001_initial.py  0002_initial.py
apps/organization/templatetags/: extra_filters.py
apps/payments/: PaymentMixins.py  admin.py  models.py  momo_api.ipynb  momo_client.ipynb  momo_test.ipynb  payments.ipynb  test_collection.py
apps/reports/: bokek_mastering.ipynb  insdutry_report.ipynb  org_urls.py  plots.py  reports.ipynb  reports2.ipynb  urls.py  views.py
apps/subscriptions/: admin.py  context_processors.py  models.py  pricing.ipynb  urls.py  views.py
apps/subscriptions/migrations/: 0001_initial.py
apps/subscriptions/templatetags/: scribscriptions.py
apps/users/: adapters.py  admin.py  apps.py  card.ipynb  courses.ipynb  courses.xlsx  fields.py  forms.py  image.ipynb  manager.ipynb  middleware.py  models.py  serializers.py  signals.py  students.xlsx  urls.py  validators.py  views.py
apps/users/migrations/: 0001_initial.py
demo/: .~lock.enrolled_students.xlsx#  MENUS.xlsx  cantine_issi.csv  datavite.xlsx  demo_customer.ipynb  demo_data.ipynb  demo_playground.ipynb  demo_stock.ipynb  enrolled_students.xlsx  menu.xlsx
demo/data/: batches.csv  categories.csv  customers.csv  facturation_batches.csv  facturation_payments.csv  facturations.csv  items.csv  organization_users.csv  organizations.csv  suppliers.csv  transactions.csv  users.csv
distrivite/: asgi.py  hosts.py  urls.py  views.py  wsgi.py
distrivite/.ipynb_checkpoints/: urls-checkpoint.py
distrivite/settings/: common.py  dev.py  prod.py
locale/en/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
sass/: _aside.scss  _mixins.scss  _nav-bar.scss  _quanta_menu.scss  _theme-default.scss  quanta.css  quanta.css.map  quanta.scss
sass/libs/: _all.scss
templates/account/: email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  signup.html
(+95 files in other folders)
