[project]
name = "distrivite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohappyeyeballs==2.6.1 ; python_full_version >= '3.9'",
  "aiohttp==3.13.2 ; python_full_version >= '3.9'",
  "aiohttp-retry==2.9.1 ; python_full_version >= '3.7'",
  "aiosignal==1.4.0 ; python_full_version >= '3.9'",
  "annotated-types==0.7.0 ; python_full_version >= '3.8'",
  "anyio==4.12.0 ; python_full_version >= '3.9'",
  "argon2-cffi==25.1.0 ; python_full_version >= '3.8'",
  "argon2-cffi-bindings==25.1.0 ; python_full_version >= '3.9'",
  "arrow==1.4.0 ; python_full_version >= '3.8'",
  "asgiref==3.11.0 ; python_full_version >= '3.9'",
  "asttokens==3.0.1 ; python_full_version >= '3.8'",
  "async-lru==2.0.5 ; python_full_version >= '3.9'",
  "async-timeout==5.0.1 ; python_full_version >= '3.8'",
  "attrs==25.4.0 ; python_full_version >= '3.9'",
  "babel==2.17.0 ; python_full_version >= '3.8'",
  "beautifulsoup4==4.14.3 ; python_full_version >= '3.7'",
  "bleach[css]==6.3.0 ; python_full_version >= '3.10'",
  "bokeh==3.8.1 ; python_full_version >= '3.10'",
  "boto3==1.42.12 ; python_full_version >= '3.9'",
  "botocore==1.42.12 ; python_full_version >= '3.9'",
  "cairocffi==1.7.1 ; python_full_version >= '3.8'",
  "cairosvg==2.8.2 ; python_full_version >= '3.9'",
  "certifi==2025.11.12 ; python_full_version >= '3.7'",
  "cffi==2.0.0 ; python_full_version >= '3.9'",
  "charset-normalizer==3.4.4 ; python_full_version >= '3.7'",
  "cloudinary==1.44.1",
  "comm==0.2.3 ; python_full_version >= '3.8'",
  "contourpy==1.3.2 ; python_full_version >= '3.10'",
  "crispy-bulma==0.12.0 ; python_full_version >= '3.8'",
  "cryptography==46.0.3 ; python_full_version >= '3.8'",
  "cssselect2==0.8.0 ; python_full_version >= '3.9'",
  "debugpy==1.8.19 ; python_full_version >= '3.8'",
  "decorator==5.2.1 ; python_full_version >= '3.8'",
  "defusedxml==0.7.1 ; python_full_version >= '2.7'",
  "diff-match-patch==20241021 ; python_full_version >= '3.7'",
  "dj-database-url==3.0.1",
  "django==4.2.3 ; python_full_version >= '3.8'",
  "django-allauth==65.1.0 ; python_full_version >= '3.8'",
  "django-autocomplete-light==3.12.1",
  "django-bootstrap-datepicker-plus==5.0.6 ; python_full_version >= '3.8' and python_full_version < '4'",
  "django-bootstrap4==25.3 ; python_full_version >= '3.10'",
  "django-ckeditor==6.7.3 ; python_full_version >= '3.8'",
  "django-cleanup==9.0.0 ; python_full_version >= '3.8'",
  "django-cloudinary-storage==0.3.0",
  "django-crispy-forms==2.5 ; python_full_version >= '3.9'",
  "django-debug-toolbar==4.3.0 ; python_full_version >= '3.8'",
  "django-embed-video==1.4.10",
  "django-extensions==4.1 ; python_full_version >= '3.9'",
  "django-filter==25.1 ; python_full_version >= '3.9'",
  "django-flatpickr==2.0.3 ; python_full_version >= '3.8' and python_full_version < '4'",
  "django-hosts==7.0.0 ; python_full_version >= '3.9'",
  "django-htmx==1.27.0 ; python_full_version >= '3.10'",
  "django-import-export[all]==4.3.14 ; python_full_version >= '3.9'",
  "django-js-asset==3.1.2 ; python_full_version >= '3.10'",
  "django-mathfilters==1.0.0",
  "django-model-utils==5.0.0 ; python_full_version >= '3.8'",
  "django-mptt==0.18.0 ; python_full_version >= '3.9'",
  "django-organizations==2.5.0 ; python_full_version >= '3.8'",
  "django-pandas==0.6.7",
  "django-phonenumber-field[phonenumbers]==8.4.0 ; python_full_version >= '3.10'",
  "django-pivot==1.10.0 ; python_full_version >= '3.8'",
  "django-polymorphic==4.4.1 ; python_full_version >= '3.10' and python_full_version < '4'",
  "django-qr-code==4.2.0 ; python_full_version >= '3.10'",
  "django-rosetta==0.10.3",
  "django-storages[s3]==1.14.6 ; python_full_version >= '3.7'",
  "django-subdomains==2.1.0",
  "django-tabular-permissions==2.9.3",
  "django-taggit==6.1.0 ; python_full_version >= '3.8'",
  "django-template-partials==25.3",
  "django-timezone-field==7.2.1 ; python_full_version >= '3.8' and python_full_version < '4'",
  "djangorestframework==3.16.1 ; python_full_version >= '3.9'",
  "djangorestframework-simplejwt==5.5.1 ; python_full_version >= '3.9'",
  "djoser==2.3.3 ; python_full_version >= '3.9' and python_full_version < '4'",
  "docopt==0.6.2",
  "drf-nested-routers==0.95.0 ; python_full_version >= '3.8'",
  "entrypoints==0.4 ; python_full_version >= '3.6'",
  "et-xmlfile==2.0.0 ; python_full_version >= '3.8'",
  "exceptiongroup==1.3.1 ; python_full_version >= '3.7'",
  "executing==2.2.1 ; python_full_version >= '3.8'",
  "fastjsonschema==2.21.2",
  "fontawesomefree==6.2.1",
  "fqdn==1.5.1 ; python_full_version >= '2.7' and python_full_version < '4'",
  "frozenlist==1.8.0 ; python_full_version >= '3.9'",
  "gunicorn==23.0.0 ; python_full_version >= '3.7'",
  "h11==0.16.0 ; python_full_version >= '3.8'",
  "html5lib==1.1 ; python_full_version >= '2.7'",
  "httpcore==1.0.9 ; python_full_version >= '3.8'",
  "httpx==0.28.1 ; python_full_version >= '3.8'",
  "idna==3.11 ; python_full_version >= '3.8'",
  "ipykernel==6.23.3 ; python_full_version >= '3.8'",
  "ipython==8.37.0 ; python_full_version >= '3.10'",
  "ipython-genutils==0.2.0",
  "ipywidgets==8.1.8 ; python_full_version >= '3.7'",
  "isoduration==20.11.0 ; python_full_version >= '3.7'",
  "jedi==0.19.2 ; python_full_version >= '3.6'",
  "jinja2==3.1.6 ; python_full_version >= '3.7'",
  "jmespath==1.0.1 ; python_full_version >= '3.7'",
  "json5==0.12.1 ; python_full_version >= '3.8'",
  "jsonpointer==3.0.0 ; python_full_version >= '3.7'",
  "jsonschema-specifications==2025.9.1 ; python_full_version >= '3.9'",
  "jsonschema[format-nongpl]==4.25.1 ; python_full_version >= '3.9'",
  "jupyter==1.1.1",
  "jupyter-client==7.4.9 ; python_full_version >= '3.7'",
  "jupyter-console==6.6.3 ; python_full_version >= '3.7'",
  "jupyter-core==5.9.1 ; python_full_version >= '3.10'",
  "jupyter-events==0.12.0 ; python_full_version >= '3.9'",
  "jupyter-lsp==2.3.0 ; python_full_version >= '3.8'",
  "jupyter-server==2.17.0 ; python_full_version >= '3.9'",
  "jupyter-server-terminals==0.5.3 ; python_full_version >= '3.8'",
  "jupyterlab==4.5.1 ; python_full_version >= '3.9'",
  "jupyterlab-pygments==0.3.0 ; python_full_version >= '3.8'",
  "jupyterlab-server==2.28.0 ; python_full_version >= '3.8'",
  "jupyterlab-widgets==3.0.16 ; python_full_version >= '3.7'",
  "lark==1.3.1 ; python_full_version >= '3.8'",
  "markdown==3.10 ; python_full_version >= '3.10'",
  "markupsafe==3.0.3 ; python_full_version >= '3.9'",
  "matplotlib-inline==0.2.1 ; python_full_version >= '3.9'",
  "mistune==3.1.4 ; python_full_version >= '3.8'",
  "multidict==6.7.0 ; python_full_version >= '3.9'",
  "narwhals==2.14.0 ; python_full_version >= '3.9'",
  "nbclassic==1.3.3 ; python_full_version >= '3.9'",
  "nbclient==0.10.2 ; python_full_version >= '3.9'",
  "nbconvert==7.16.6 ; python_full_version >= '3.8'",
  "nbformat==5.10.4 ; python_full_version >= '3.8'",
  "nest-asyncio==1.6.0 ; python_full_version >= '3.5'",
  "notebook==6.5.6 ; python_full_version >= '3.7'",
  "notebook-shim==0.2.4 ; python_full_version >= '3.7'",
  "num2words==0.5.14",
  "numpy==2.2.6 ; python_full_version >= '3.10'",
  "oauthlib==3.3.1 ; python_full_version >= '3.8'",
  "odfpy==1.4.1",
  "openpyxl==3.1.5 ; python_full_version >= '3.8'",
  "overrides==7.7.0 ; python_full_version >= '3.6'",
  "packaging==25.0 ; python_full_version >= '3.8'",
  "paho-mqtt==2.1.0 ; python_full_version >= '3.7'",
  "pandas==2.3.3 ; python_full_version >= '3.9'",
  "pandocfilters==1.5.1 ; python_full_version >= '2.7'",
  "parso==0.8.5 ; python_full_version >= '3.6'",
  "pexpect==4.9.0 ; sys_platform != 'emscripten' and sys_platform != 'win32'",
  "phonenumbers==9.0.20",
  "pillow==12.0.0 ; python_full_version >= '3.10'",
  "platformdirs==4.5.1 ; python_full_version >= '3.10'",
  "polib==1.2.0",
  "prometheus-client==0.23.1 ; python_full_version >= '3.9'",
  "prompt-toolkit==3.0.52 ; python_full_version >= '3.8'",
  "propcache==0.4.1 ; python_full_version >= '3.9'",
  "psutil==7.1.3 ; python_full_version >= '3.6'",
  "psycopg2-binary==2.9.11 ; python_full_version >= '3.9'",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.3",
  "pycparser==2.23 ; python_full_version >= '3.8'",
  "pydantic==2.12.5 ; python_full_version >= '3.9'",
  "pydantic-core==2.41.5 ; python_full_version >= '3.9'",
  "pydantic-settings==2.12.0 ; python_full_version >= '3.10'",
  "pygments==2.19.2 ; python_full_version >= '3.8'",
  "pyjwt[crypto]==2.10.1 ; python_full_version >= '3.9'",
  "pyphen==0.17.2 ; python_full_version >= '3.9'",
  "python-dateutil==2.9.0.post0 ; python_full_version >= '2.7'",
  "python-decouple==3.8",
  "python-dotenv==1.2.1 ; python_full_version >= '3.9'",
  "python-json-logger==4.0.0 ; python_full_version >= '3.8'",
  "python3-openid==3.2.0",
  "pytz==2025.2",
  "pyyaml==6.0.3 ; python_full_version >= '3.8'",
  "pyzmq==24.0.1 ; python_full_version >= '3.6'",
  "referencing==0.37.0 ; python_full_version >= '3.10'",
  "requests==2.32.5 ; python_full_version >= '3.9'",
  "requests-oauthlib==2.0.0 ; python_full_version >= '3.4'",
  "rfc3339-validator==0.1.4 ; python_full_version >= '2.7'",
  "rfc3986-validator==0.1.1 ; python_full_version >= '2.7'",
  "rfc3987-syntax==1.1.0 ; python_full_version >= '3.9'",
  "rpds-py==0.30.0 ; python_full_version >= '3.10'",
  "s3transfer==0.16.0 ; python_full_version >= '3.9'",
  "segno==1.6.6 ; python_full_version >= '3.5'",
  "send2trash==1.8.3 ; python_full_version >= '2.7'",
  "setuptools==80.9.0 ; python_full_version >= '3.9'",
  "six==1.17.0 ; python_full_version >= '2.7'",
  "social-auth-app-django==5.4.3 ; python_full_version >= '3.9'",
  "social-auth-core==4.8.1 ; python_full_version >= '3.10'",
  "soupsieve==2.8 ; python_full_version >= '3.9'",
  "sqlparse==0.5.4 ; python_full_version >= '3.8'",
  "stack-data==0.6.3",
  "tablib[all]==3.9.0 ; python_full_version >= '3.9'",
  "tabulate==0.9.0 ; python_full_version >= '3.7'",
  "terminado==0.18.1 ; python_full_version >= '3.8'",
  "tinycss2==1.4.0 ; python_full_version >= '3.8'",
  "tomli==2.3.0 ; python_full_version >= '3.8'",
  "tornado==6.5.4 ; python_full_version >= '3.9'",
  "traitlets==5.14.3 ; python_full_version >= '3.8'",
  "twilio==9.9.0 ; python_full_version >= '3.7'",
  "typing-extensions==4.15.0 ; python_full_version >= '3.9'",
  "typing-inspection==0.4.2 ; python_full_version >= '3.9'",
  "tzdata==2025.3 ; python_full_version >= '2'",
  "uri-template==1.3.0 ; python_full_version >= '3.7'",
  "urllib3==2.6.2 ; python_full_version >= '3.9'",
  "wcwidth==0.2.14 ; python_full_version >= '3.6'",
  "weasyprint==52.5 ; python_full_version >= '3.6'",
  "webcolors==25.10.0 ; python_full_version >= '3.10'",
  "webencodings==0.5.1",
  "websocket-client==1.9.0 ; python_full_version >= '3.9'",
  "whitenoise==6.11.0 ; python_full_version >= '3.9'",
  "widgetsnbextension==4.0.15 ; python_full_version >= '3.7'",
  "xlrd==2.0.2 ; python_full_version >= '2.7'",
  "xlwt==1.3.0",
  "xyzservices==2025.11.0 ; python_full_version >= '3.8'",
  "yarl==1.22.0 ; python_full_version >= '3.9'",
]

[dependency-groups]
dev = ["pytest", "ruff", "black"]
